--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
     -->
 	<link rel="stylesheet" href="../css/skins/skin-blue.min.css">
 	<link rel="stylesheet" href="bower_components/ng-table/dist/ng-table.css">
+	<link rel="stylesheet" href="bower_components/angular-ui-grid/ui-grid.css">
 	<link rel="stylesheet" href="../css/stylesheet.css">
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -40,7 +41,7 @@
 	<!-- REQUIRED JS SCRIPTS -->
 
 	<!-- jQuery 2.1.4 -->
-	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="bower_components/jquery/dist/jquery.js"></script>
 	<!-- Bootstrap 3.3.5 -->
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 	<!-- AdminLTE App -->
@@ -51,6 +52,7 @@
 	<script src="bower_components/ngstorage/ngStorage.js"></script>
 	<script src="bower_components/checklist-model/checklist-model.js"></script>
 	<script src="bower_components/ng-table/dist/ng-table.js"></script>
+	<script src="bower_components/angular-ui-grid/ui-grid.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/directive.js"></script>
 	<script src="js/controller/auth.js"></script>
@@ -58,6 +60,7 @@
 	<script src="js/services/lb-services.js"></script>
 	<script src="js/services/auth.js"></script>
 	<script src="js/controller/tableId.js"></script>
+	<script src="js/controller/administration.js"></script>
 </body>
 
 </html>
